v1.0.0/modules/schema/pages/class/OldTransformerTankInfo.adoc
= `OldTransformerTankInfo`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:OldTransformerTankInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]
**** *`OldTransformerTankInfo`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
OldTransformerTankInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







TransformerEndInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerTransformerInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CatalogAssetType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






OldTransformerTankInfo -> TransformerEndInfo: TransformerEndInfos


OldTransformerTankInfo -> PowerTransformerInfo: PowerTransformerInfo


OldTransformerTankInfo -> PowerSystemResource: PowerSystemResources


OldTransformerTankInfo -> CatalogAssetType: CatalogAssetType


OldTransformerTankInfo -> Asset: Assets


OldTransformerTankInfo -> ProductAssetModel: ProductAssetModel


OldTransformerTankInfo -> DiagramObject: DiagramObjects


OldTransformerTankInfo -> InstanceSet: InstanceSet


OldTransformerTankInfo -> Name: Names


OldTransformerTankInfo -> ChangeSetMember: PropertiesCIMDataObject


OldTransformerTankInfo -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<PowerTransformerInfo,`PowerTransformerInfo`>>
| 1
| xref::class/PowerTransformerInfo.adoc[`PowerTransformerInfo`]
| +++Power transformer data that this tank description is part of.+++

| <<TransformerEndInfos,`TransformerEndInfos`>>
| 1..*
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Data for all the ends described by this transformer tank data.+++

| <<constructionKind,`constructionKind`>>
| 0..1
| xref::enumeration/TransformerConstructionKind.adoc[`TransformerConstructionKind`]
| +++Kind of construction for this transformer.+++

| <<coreCoilsWeight,`coreCoilsWeight`>>
| 0..1
| xref::class/Mass.adoc[`Mass`]
| +++Weight of core and coils in transformer.+++

| <<coreKind,`coreKind`>>
| 0..1
| xref::enumeration/TransformerCoreKind.adoc[`TransformerCoreKind`]
| +++Core kind of this transformer product.+++

| <<function,`function`>>
| 0..1
| xref::enumeration/TransformerFunctionKind.adoc[`TransformerFunctionKind`]
| +++Function of this transformer.+++

| <<neutralBIL,`neutralBIL`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Basic insulation level of neutral.+++

| <<oilPreservationKind,`oilPreservationKind`>>
| 0..1
| xref::enumeration/OilPreservationKind.adoc[`OilPreservationKind`]
| +++Kind of oil preservation system.+++

| <<CatalogAssetType,`CatalogAssetType`>>
| 0..1
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++

| <<ProductAssetModel,`ProductAssetModel`>>
| 0..1
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#constructionKind]
=== `constructionKind`
+++Kind of construction for this transformer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerTankInfo.constructionKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerConstructionKind.adoc[`TransformerConstructionKind`]


|===

//[discrete]
[#coreCoilsWeight]
=== `coreCoilsWeight`
+++Weight of core and coils in transformer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerTankInfo.coreCoilsWeight`
| Cardinality
| 0..1
| Type
| xref::class/Mass.adoc[`Mass`]


|===

//[discrete]
[#coreKind]
=== `coreKind`
+++Core kind of this transformer product.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerTankInfo.coreKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerCoreKind.adoc[`TransformerCoreKind`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#function]
=== `function`
+++Function of this transformer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerTankInfo.function`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerFunctionKind.adoc[`TransformerFunctionKind`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#neutralBIL]
=== `neutralBIL`
+++Basic insulation level of neutral.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerTankInfo.neutralBIL`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#oilPreservationKind]
=== `oilPreservationKind`
+++Kind of oil preservation system.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OldTransformerTankInfo.oilPreservationKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/OilPreservationKind.adoc[`OilPreservationKind`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#PowerTransformerInfo]
=== `PowerTransformerInfo`
+++Power transformer data that this tank description is part of.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTankInfo.PowerTransformerInfo`
| Cardinality
| 1
| Type
| xref::class/PowerTransformerInfo.adoc[`PowerTransformerInfo`]

| Inherited from
| xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]


|===

//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TransformerEndInfos]
=== `TransformerEndInfos`
+++Data for all the ends described by this transformer tank data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTankInfo.TransformerEndInfos`
| Cardinality
| 1..*
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]

| Inherited from
| xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]


|===


